# decoders

./: .gitignore  CHANGELOG.md  README.md  build_upload.sh  example.py  pyproject.toml  pytest.ini
src/decoders/: __init__.py  binary_transformer.py  fake_transformer.py  generation_mixin.py  small_prob_transformer.py  toolbox.py  utils.py
src/decoders/simple/: ancestral.py  beam_search.py  simple_beam_utils.py  stochastic_beam_search.py
src/decoders/strategies/: assisted_decoder.py  beam_constrained_decoder.py  beam_decoder.py  beam_sampling_decoder.py  beam_search_decoder.py  beam_utils.py  contrastive_decoder.py  diverse_group_beam_decoder.py  greedy_decoder.py  sampling_decoder.py  stochastic_beam_search.py  utils.py
src/decoders/strategies/sbs_helpers/: gumbel.py  logits_process.py
tests/: test_binaryTransformer.py  test_binary_fake_transformer.py  test_new_beam_search.py  test_sbs.py  test_simple_ancestral.py  test_simple_beam_search.py  test_simple_sbs.py  test_small_prob_transformer.py  test_standard_generation.py  test_stochastic_beam_search.py
