[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "decoders"
version = "0.0.7"
authors = [
  { name="Manuel de Prada Corral", email="manueldeprada@gmail.com" },
]
description = "Diverse and extensible generation decoding libraries for transformers."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    'transformers==4.32.0',
#   'A>=1,<2',
#   'B>=2'
]

[project.urls]
"Homepage" = "https://github.com/manueldeprada/decoders"

